docs/assets/styles/docs.css
/* ... */
/* Component pages */
.component-summary {
  font-size: 1.25rem;
}

#content table code {
  background: none;
  color: inherit;
}

html:not(.quiet-dark) quiet-scroller:has(.component-table) {
  --shadow-color: #0001;
  --shadow-size: 0.75rem;

  /* Add a border to each shadow */
  &::part(start-shadow) {
    border-left: solid 1px #0002;
  }

  &::part(end-shadow) {
    border-right: solid 1px #0002;
  }

  /* Taper the shadows at the top and bottom for a realistic effect */
  &::part(start-shadow),
  &::part(end-shadow) {
    mask-image: linear-gradient(to bottom, transparent 0%, black 10%, black 90%, transparent 100%);
  }
}

/* Copy buttons in tables */
.component-table quiet-copy quiet-button {
  &::part(button) {
    padding: 0;
    gap: 0.1rem;
    background: transparent;
    font-size: inherit;
  }

  &::part(button):active {
    translate: 0;
  }

  quiet-icon {
    font-size: 1rem;
  }
}

.table-description,
.table-arguments {
  min-width: 35ch;
}

.table-name code,
.table-description code,
.table-attribute code,
.table-type code,
.table-selector code,
.table-default code {
  display: inline-block;
  white-space: nowrap;
}

/* Mascot images */
.whiskers-center {
  display: block;
  width: auto;
  max-height: 12rem;
  margin-inline: auto;
  margin-block-end: 1.5rem;

  @media screen and (max-width: 959px) {
    max-height: 7.5rem;
  }
}

.whiskers-end {
  display: inline;
  width: auto;
  max-height: 12rem;
  margin-inline-start: 1.5rem;
  margin-block-end: 1.5rem;
  float: right;

  @media screen and (max-width: 959px) {
    max-height: 7.5rem;
  }
}

.whiskers-center-large {
  display: block;
  width: auto;
  max-height: 20rem;
  margin-inline: auto;
  margin-block-end: 1.5rem;

  @media screen and (max-width: 959px) {
    max-height: 16rem;
  }
}

.whiskers-email {
  position: relative;
  width: 300px;
  margin-inline: auto;
  margin-block: 3rem;
  text-align: center;

  img,
  svg {
    display: block;
    width: 100%;
    width: 230px;
    height: auto;
    margin-inline: auto;
  }

  .whiskers-email-controls {
    display: flex;
    position: absolute;
    top: 120px;
    left: 16%;
    align-items: center;
    width: 67%;
    gap: 8px;
  }

  small {
    display: block;
    margin-block-start: 1rem;
  }

  quiet-text-field {
    flex: 1 1 auto;

    &::part(label) {
      position: absolute;
      width: 1px;
      height: 1px;
      overflow: hidden;
      white-space: nowrap;
      clip-path: inset(50%);
    }

    &::part(description) {
      display: none;
    }
  }

  quiet-button {
    flex: 0 0 auto;
  }
}

/* Avatars */
.avatar {
  max-width: 10rem;
  height: auto;
  margin-inline-start: 2rem;
  margin-block-end: 1rem;
  float: right;
  border-radius: var(--quiet-border-radius-circle);

  @media screen and (max-width: 959px) {
    max-width: 7.5rem;
  }
}

/* Features grid */
.features-grid {
  display: grid;
  grid-template-columns: 1fr 1fr;
  margin: 0;
  margin-block-end: 2rem;
  padding: 0;
  gap: 2rem;

  li {
    display: block;
    position: relative;
    margin: 0;
    padding: 2.5rem 1.5rem;
    border: var(--quiet-border-style) var(--quiet-border-width) var(--quiet-neutral-stroke-softer);
    border-radius: 1rem;
    background-color: var(--quiet-paper-color);
    box-shadow: var(--quiet-shadow-softer);
    color: color-mix(in oklab, var(--quiet-neutral-text-on-soft), transparent 25%);
    font-weight: var(--quiet-font-weight-semibold);
    line-height: 1.6;
    list-style: none;
    text-align: center;

    small {
      font-weight: var(--quiet-font-weight-normal);
    }

    &:has(a) {
      transition: all 150ms ease-out;

      @media (hover: hover) {
        &:hover {
          transform: translateY(-3px) scale(1.02);
          box-shadow: var(--quiet-shadow-soft);
        }
      }
    }

    a.stretch {
      display: block;
      position: relative;
      top: 0;
      left: 0;
      width: calc(100% + 2rem);
      height: calc(100% + 2rem);
      margin: -1rem;
      padding: 1rem;
      color: inherit;
      font-weight: inherit;
      text-decoration: none;
    }

    quiet-icon {
      font-size: 4rem;
      stroke-width: 1px;
    }

    img {
      display: inline-block;
      width: auto;
      max-width: 4rem;
      height: 4rem;
      max-height: 4rem;
    }
  }
}

@media screen and (max-width: 650px) {
  .features-grid {
    grid-template-columns: 1fr;
    max-width: 22rem;
    margin-inline: auto;
    gap: 1rem;

    li {
      font-size: 1rem;
    }

    &::first-letter {
      font-size: 1rem;
    }
  }
}

/* Pricing table */
.pricing-tiers {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 0.5rem;
  text-align: center;

  h3 {
    font-size: 1.5rem;
  }

  h3:first-of-type {
    margin-block: 0;
    text-align: center;
  }

  @media screen and (min-width: 768px) and (max-width: 959px) {
    h3 {
      font-size: 1.33rem;
    }
  }

  @media screen and (min-width: 768px) {
    margin-block: 3rem;

    .pricing-tier:nth-child(1) {
      border-top-right-radius: 0;
      border-bottom-right-radius: 0;
    }

    .pricing-tier:nth-child(2) {
      scale: 1.09;
    }

    .pricing-tier:nth-child(3) {
      border-top-left-radius: 0;
      border-bottom-left-radius: 0;
    }
  }

  @media screen and (max-width: 767px) {
    grid-template-columns: 1fr;
    max-width: 320px;
    margin-inline: auto;
    margin-block: 2rem;
    gap: 0.5rem;

    .pricing-tier:nth-child(2) {
      scale: 1.1;
    }
  }
}
/* ... */

